# AUV_kalman_Filter

./: readme_for_simulation_and_filter  robot_visuals.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kalmenfilter_cpp_pkg/lib/kalmenfilter_cpp_pkg/: cpp_node  news_publisher  state_subscriber  subscriber
install/kalmenfilter_cpp_pkg/share/kalmenfilter_cpp_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kalmenfilter_cpp_pkg/share/kalmenfilter_cpp_pkg/cmake/: kalmenfilter_cpp_pkgConfig.cmake
log/: latest_build
original_sensors_urdf/: rexrov_sensors.xacro
recording_script/: record.py
robosub_gazebo_elements/cobalt/: model.sdf
robosub_gazebo_elements/torpedo_target/: torpedo_target.sdf
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/kalmenfilter_cpp_pkg/: CMakeLists.txt  package.xml
src/kalmenfilter_cpp_pkg/config/: mapper_params_online_async.yaml
src/kalmenfilter_cpp_pkg/include/kalmenfilter_cpp_pkg/: filter_preocessing_unit.hpp  state_subscriber.hpp
src/kalmenfilter_cpp_pkg/src/: filter_preocessing_unit.cpp  publisher.cpp  state_subscriber.cpp  state_subscriber_organised.cpp  subscriber.cpp  template_cpp_node.cpp
src/log/: latest_build
src/lqrpy/: package.xml  setup.cfg  setup.py
src/lqrpy/lqrpy/: LQR.py  MA.txt  MRB.txt  Matrices.py  ModelMatercies.py  QuadraticDamping.txt  linearDamping.txt  lqrNode.py
src/sensor_data_bringup/: CMakeLists.txt  package.xml
src/sensor_data_bringup/launch/: pointCloud_2_LaserScan.launch.py
(+3 files in other folders)
